k8s/prometheus/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
  name: prometheus
  namespace: logistic-package
spec:
  type: ClusterIP
  ports:
    - name: "prometheus-ui"
      port: 9090
      targetPort: 9090
  selector:
    app: prometheus
